# walk-the-dog

./: .gitignore  Cargo.toml  LICENSE_MIT  build.ps1  memo.md  rust-toolchain.toml
.github/workflows/: build.yml
src/: browser.rs  engine.rs  game.rs  lib.rs  miya.rs  segments.rs  sound.rs  utils.rs
tests/: web.rs
web/: index.html  package-lock.json  package.json  sound.rs  style.css
web/src/: main.ts  style.css
